--- a/pedido-comida/src/assets/styles.css
+++ b/pedido-comida/src/assets/styles.css
@@ -1,3 +1,36 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.seccion-uno {
+    background-image: linear-gradient(
+        to right, 
+        rgba(0,0,0,1.0) 0%, 
+        rgba(0,0,0,0.9) 20%, 
+        rgba(0,0,0,0.7) 40%, 
+        rgba(0,0,0,0.8) 60%, 
+        rgba(0,0,0,0.9) 80%, 
+        rgba(0,0,0,1.0) 100%
+    ), 
+    url(../assets/img/madera2.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.altura{
+    height: 2200%;
+   
+}
+.concert-one-regular {
+    font-family: "Concert One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .custom-rotation.custom-rotation {
+    transform-origin: center;
+    transform: rotate(-5deg);
+  }
+  
+
+
